[workspace]
resolver = "2"
members = [
    "burst-transfer",
    "cargo-psibase",
    "fracpack",
    "gen-cpp-doc",
    "md2man",
    "psibase_macros",
    "psibase",
    "test_contract",
    "test_contract_2",
    "test_package/plugin",
    "test_package/query",
    "test_package/service",
    "test_fracpack",
    "test_subjective",
    "test_psibase_macros",
]

default-members = [
    "burst-transfer",
    "cargo-psibase",
    "fracpack",
    "gen-cpp-doc",
    "md2man",
    "psibase_macros",
    "psibase",
    "test_fracpack",
]

[workspace.package]
version = "0.16.0"
rust-version = "1.64"
repository = "https://github.com/gofractally/psibase"
homepage = "https://psibase.io"

[workspace.dependencies]
async-graphql = "=7.0.17"
