[workspace]
resolver = "2"
members = [
    "burst-transfer",
    "cargo-psibase",
    "fracpack",
    "gen-cpp-doc",
    "md2man",
    "psibase_macros",
    "psibase",
    "test_contract",
    "test_contract_2",
    "test_package/plugin",
    "test_package/query",
    "test_package/service",
    "test_fracpack",
    "test_subjective",
    "test_psibase_macros",
]

default-members = [
    "burst-transfer",
    "cargo-psibase",
    "fracpack",
    "gen-cpp-doc",
    "md2man",
    "psibase_macros",
    "psibase",
    "test_fracpack",
]

[workspace.package]
version = "0.17.0"
rust-version = "1.64"
repository = "https://github.com/gofractally/psibase"
homepage = "https://psibase.io"

[workspace.dependencies]
async-graphql = "=7.0.17"
# Standardize external dependencies to enable build artifact sharing
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
anyhow = "1.0"

# Tier 2 consolidation - high-priority shared dependencies
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }
chrono = "0.4"
sha2 = "0.10"
url = "2.5"
regex = "1.0"
pem = "3.0"
