[workspace]
resolver = "2"
members = ["user/Branding/service", "user/Branding/plugin"]
default-members = ["branding", "plugin"]

[workspace.package]
version = "0.12.0"
rust-version = "1.64"
repository = "https://github.com/gofractally/psibase"
homepage = "https://psibase.io"

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
