[workspace]
resolver = "2"
members = [
    "system/Accounts/plugin/",
    "system/AuthAny/plugin/",
    "system/AuthDelegate/plugin/",
    "system/AuthSig/plugin/",
    "system/Transact/plugin/",
    "user/ClientData/plugin",
    "user/Invite/plugin",
    "user/Invite/plugin_AuthInvite",
    "user/Sites/plugin",
    "user/Supervisor/plugin",
    "user/Tokens/plugin",
]

exclude = [
    "user/CommonApi/common/packages/component-parser",
    # other excludes
]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[workspace.package]
version = "0.13.0"
edition = "2021"
rust-version = "1.64"
repository = "https://github.com/gofractally/psibase"
homepage = "https://psibase.io"
