[workspace]
members = [
    "system/Accounts/plugin/accounts/",
    "system/Accounts/plugin/account_tokens/",
    "system/AuthAny/plugin/",
    "system/AuthDelegate/plugin/",
    "system/AuthSig/plugin/",
    "system/Transact/plugin/",
    "system/SetCode/plugin/",
    "system/Producers/plugin/",
    "system/StagedTx/",
    "user/Aes/plugin",
    "user/Base64/plugin",
    "user/ClientData/plugin",
    "user/Invite/plugin",
    "user/Invite/plugin_AuthInvite",
    "user/Kdf/plugin",
    "user/Sites/plugin",
    "user/Supervisor/plugin",
    "user/Packages/plugin",
    "user/Permissions/plugin",
    "user/Tokens/plugin",
    "user/Workshop/plugin",
    "user/Branding/",
    "user/BrotliCodec/",
    "user/Chainmail/",
    "user/Evaluations/",
    "user/Fractals/",
    "user/Identity/",
    "user/Profiles/",
    "user/Registry/",
    "user/Subgroups/",
]
resolver = "2"

# Moved to existing workspace.dependencies section below

exclude = [
    "user/CommonApi/common/packages/component-parser",
    "user/XAdmin/ui/wasm",
]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[workspace.package]
version = "0.19.0"
edition = "2021"
rust-version = "1.64"
repository = "https://github.com/gofractally/psibase"
homepage = "https://psibase.io"
publish = false

[workspace.dependencies]
async-graphql = "=7.0.17"
# Standardize external dependencies to enable build artifact sharing
wit-bindgen-rt = { version = "0.25.0", features = ["bitflags"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# Tier 2 consolidation - high-priority shared dependencies
chrono = "0.4"
base64 = "0.22"
sha2 = "0.10"
url = "2.5"
rand = "0.9"
pem = "3.0"
regex = "1.0"
brotli = "7.0.0"

# Dependencies from individual package workspaces
serde-aux = "4.5.0"
ecies = { version = "0.2", default-features = false, features = ["pure"] }
average = "0.16.0"
