function(contract name)
    add_executable(${name} ${ARGN})
    target_include_directories(${name} PUBLIC include)
    target_link_libraries(${name} psibase-contract-simple-malloc)
    set_target_properties(${name} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${ROOT_BINARY_DIR})
endfunction()

function(add suffix)
    add_library(base_contracts${suffix} INTERFACE)
    target_include_directories(base_contracts${suffix} INTERFACE include)

    if(DEFINED IS_WASM)
        contract(account_sys${suffix} src/account_sys.cpp)
        contract(auth_ec_sys${suffix} src/auth_ec_sys.cpp)
        contract(auth_fake_sys${suffix} src/auth_fake_sys.cpp)
        contract(transaction_sys${suffix} src/transaction_sys.cpp)
        contract(verify_ec_sys${suffix} src/verify_ec_sys.cpp)
    endif()
endfunction(add)

add("")
add("-debug")
